2014-06-04  Jason Merrill  <jason@redhat.com>

	PR c++/61343
	* decl.c (check_initializer): Maybe clear
	DECL_INITIALIZED_BY_CONSTANT_EXPRESSION_P.

2014-06-05  Richard Biener  <rguenther@suse.de>

	PR c++/61004
	* typeck.c (cp_build_indirect_ref): Do not emit strict-aliasing
	warnings for accessing empty classes.

2014-06-05  Marek Polacek  <polacek@redhat.com>

	PR c/49706
	* parser.c (cp_parser_binary_expression): Warn when logical not is
	used on the left hand side operand of a comparison.

2014-06-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/43453
	* typeck.c (cp_build_modify_expr): Handle array of characters
	initialized by a string literal.
	* decl.c (check_initializer): Handle parenthesized string literal
	as initializer.
	* typeck2.c (store_init_value): Remove redundant check.

2014-06-04  Jason Merrill  <jason@redhat.com>

	PR c++/51253
	PR c++/61382
	* cp-gimplify.c (cp_gimplify_expr): Handle CALL_EXPR_LIST_INIT_P here.
	* semantics.c (simplify_aggr_init_expr): Not here, just copy it.

2014-06-04  Igor Zamyatin  <igor.zamyatin@intel.com>

	PR c/58942
	* cp-array-notation.c (expand_sec_reduce_builtin): Handle the case
	with a pointer.

2014-06-03  Paolo Carlini  <paolo.carlini@oracle.com>

	DR 1423
	PR c++/52174
	* call.c (standard_conversion): Convert nullptr to bool only
	in case of direct-initialization.
	(convert_like_real): Provide informative error message.

2014-06-03  Marek Polacek  <polacek@redhat.com>

	PR c/60439
	* semantics.c (finish_switch_cond): Warn if switch condition has
	boolean value.

2014-06-03  Jason Merrill  <jason@redhat.com>

	PR c++/60992
	* pt.c (tsubst_copy) [VAR_DECL]: Try lookup first.  Add a new
	variable to local_specializations.

	PR c++/60848
	* call.c (is_std_init_list): Check CLASSTYPE_TEMPLATE_INFO.

2014-06-02  Jason Merrill  <jason@redhat.com>

	PR c++/61046
	* decl.c (reshape_init_class): Handle un-folded
	constant-expressions.

	PR c++/61134
	* pt.c (pack_deducible_p): Handle canonicalization.
